--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -38,6 +38,11 @@ p {
   padding: 160px 20px;
 }
 
+.about-section {
+  text-align: center;
+  padding: 0px;
+}
+
 .hero p {
   font-family: var(--default-font-family);
   font-size: 36px;
@@ -51,6 +56,26 @@ p {
   font-weight: normal;
   font-size: 24px;
   line-height: 30px;
+}
+
+
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+
+.about-section h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+} 
+
+.about-section {
+  padding: 160px 20px;
+}
+
+
+.about-section-content {
+  margin: 30px;
 }
 
 .btn-branding {
@@ -79,6 +104,12 @@ h2 {
   padding: 120px 60px 0px;
 }
 
+.jabu-image {
+  max-width: 100%;
+  height: auto;
+  width: 150px;
+}
+
 @media (max-width: 900px) {
   .project-description {
     font-size: 50px;
@@ -86,8 +117,17 @@ h2 {
     text-align: center;
   }
 
+
+  .col-md-6 {
+    flex: 1;
+    max-width: 100%;
+    padding: 20px;
+  }
 }
 
 .row {
   display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
