--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -75,7 +75,7 @@ p {
 
 
 .about-section-content {
-  margin: 30px;
+  margin: 30px 0;
 }
 
 .btn-branding {
@@ -111,6 +111,11 @@ h2 {
     padding: 0;
     text-align: center;
   }
+  .row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .row {
@@ -118,4 +123,14 @@ h2 {
   align-items: center;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+
+.col-md-6 {
+  flex-grow: 1;
+  padding: 20px;
+}
+
+img {
+  width: 100%;
+  height: auto;
 }
