--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -23,6 +23,12 @@ h1 {
   line-height: 30px;
 }
 
+.work-page-h1 {
+  font-size: 50px;
+  text-align: center;
+  line-height: 80px;
+}
+
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
@@ -119,5 +125,23 @@ h2 {
   h1 {
     font-size: 48px;
   }
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+  .work-page-h1 {
+    font-size: 25px;
+    padding: 0;
+    margin: 0;
+  }
 }
 
+.work-page-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.work-page-img {
+  width: 400px;
+}
