--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -38,7 +38,7 @@ p {
   padding: 160px 20px;
 }
 
-.about-section {
+.content-container {
   text-align: center;
   padding: 0px;
 }
@@ -59,17 +59,17 @@ p {
 }
 
 
-.about-section h1 {
+.content-container h1 {
   font-size: 64px;
   line-height: 80px;
 }
 
-.about-section h2 {
+.content-container h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 } 
 
-.about-section {
+.content-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -78,7 +78,7 @@ p {
 }
 
 
-.about-section-content {
+.content {
   margin: 30px 0;
 }
 
