--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -71,7 +71,6 @@ p {
 
 .content-container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
 
@@ -79,6 +78,7 @@ p {
 
 
 .content {
+  display: flex;
   margin: 30px 0;
 }
 
