--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -18,6 +18,13 @@ h6 {
   font-weight: bold;
 }
 
+nav {
+  background-color: plum;
+  justify-content: space-evenly;
+  margin-top: 0;
+  
+}
+
 h1 {
   font-size: 70px;
   line-height: 30px;
@@ -84,8 +91,10 @@ p {
 }
 
 .contact-content {
-  margin-left: 550px;
+  margin-left: 450px;
   font-size: 18px;
+  margin-top: 20px;
+  line-height: 2;
 }
 
 
@@ -150,4 +159,26 @@ h2 {
 
 .work-page-img {
   width: 400px;
+}
+
+.about-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+footer {
+  
+}
+
+.work-inquiry {
+  margin-left: 400px;
+  
+}
+
+.message-inquiry {
+  width: 200px;
+  height: 150px;
+  border: 4px solid aqua;
+  margin-left: 400px;
 }
