--- a/portfolio.css/style.css
+++ b/portfolio.css/style.css
@@ -168,17 +168,26 @@ h2 {
 }
 
 footer {
+  margin-top: 50px;
   
 }
 
 .work-inquiry {
-  margin-left: 400px;
+  margin-left: 450px;
   
 }
 
-.message-inquiry {
-  width: 200px;
-  height: 150px;
-  border: 4px solid aqua;
-  margin-left: 400px;
+form {
+  margin-left: 450px;
+  margin-top: 20px;
 }
+
+input {
+  background-color: white;
+  border: 2px solid rgb(150, 87, 209);
+  color: rgb(150, 87, 209);
+  font-size: 16px;
+  padding: 10px;
+
+}
+
